# lexir

./: Cargo.toml  README.md
.cursor/rules/: lexir-recordlog.mdc
src/: bm25.rs  fuzzy.rs  lib.rs  query_likelihood.rs  tfidf.rs
tests/: recordlog_cli.rs
