[package]
name = "lexir"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Lexical IR (BM25/TF-IDF) on top of postings lists."
repository = "https://github.com/arclabs561/lexir"
homepage = "https://github.com/arclabs561/lexir"
documentation = "https://docs.rs/lexir"
keywords = ["information-retrieval", "bm25", "tfidf", "postings"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
postings = { git = "https://github.com/arclabs561/postings" }
rankfns = { git = "https://github.com/arclabs561/rankfns" }
thiserror = "2.0"
gramdex = { git = "https://github.com/arclabs561/gramdex", optional = true }
textprep = { git = "https://github.com/arclabs561/textprep", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
durability = { git = "https://github.com/arclabs561/durability", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
postcard = { version = "1.0", optional = true, features = ["alloc"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[features]
default = ["persistence"]
fuzzy = ["dep:gramdex"]
persistence = ["dep:durability", "dep:serde", "postings/persistence"]
recordlog = ["persistence", "dep:postcard"]
cli = ["dep:clap", "dep:textprep", "recordlog"]