[package]
name = "lexir"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Lexical IR (BM25/TF-IDF) on top of postings lists."
repository = "https://github.com/arclabs561/lexir"
homepage = "https://github.com/arclabs561/lexir"
documentation = "https://docs.rs/lexir"
readme = "README.md"
keywords = ["information-retrieval", "bm25", "tf-idf", "search"]
categories = ["text-processing", "algorithms"]

[dependencies]
postings = { path = "../postings", version = "0.1.0" }
thiserror = { workspace = true }
rankfns = { path = "../rankfns", version = "0.1.0" }
gramdex = { path = "../gramdex", version = "0.1.0", optional = true }
textprep = { path = "../textprep", version = "0.1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
durability = { path = "../durability", version = "0.1.0", optional = true }
serde = { workspace = true, optional = true }
postcard = { version = "1.0", optional = true, features = ["alloc"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = { workspace = true }

[lints]
workspace = true

[features]
default = ["persistence"]
fuzzy = ["dep:gramdex"]
persistence = ["dep:durability", "dep:serde", "postings/persistence"]
recordlog = ["persistence", "dep:postcard"]
cli = ["dep:clap", "dep:textprep", "recordlog"]